# SDL3-Vulkan-Game-Engine

./: .gitignore  README.md
Box2D/: CMakeLists.txt
PachinkoChallenge/: CMakeLists.txt  PachinkoChallenge.code-workspace
PachinkoChallenge/data/objects/: camera.lst
PachinkoChallenge/data/objects/2d/menu/: confirmation.menu  game_start.menu  main_menu.cfg  pause.menu  title_screen.menu
PachinkoChallenge/data/objects/2d/objectDataList/: dataTable.lst  level1List.lst  loadingScreenDataList.lst  menuBackgrounds.lst  menuButtonFrames.lst  menuMisc.lst  startupDataList.lst  titleScreenDataList.lst
PachinkoChallenge/data/objects/2d/physics/: gamePhysics.cfg
PachinkoChallenge/data/objects/strategy/: strategyTable.lst
PachinkoChallenge/data/objects/strategy/level_1/: ball.strategy  multi.strategy  stage.loader  stage.strategy  strategy.loader  ui.strategy  win_meter.ctrl
PachinkoChallenge/data/objects/strategy/state/: loadscreen.loader  loadscreen.strategy  startup.loader  startup.strategy  titlescreen.ball.strategy  titlescreen.loader  titlescreen.stage.loader  titlescreen.stage.strategy
PachinkoChallenge/data/scripts/: scriptListTable.lst
PachinkoChallenge/data/scripts/source/game/: game.as  main.as
PachinkoChallenge/data/scripts/source/state/: commonstate.as  igamestate.as  level1state.as  startupstate.as  statedefs.as  statemessage.as  titlescreenstate.as
PachinkoChallenge/data/settings/: controllerMapping.cfg  settings.cfg
PachinkoChallenge/data/shaders/: load_shader.cfg  quad.vert  quad_no_txt.vert
PachinkoChallenge/data/textures/fonts/: font.lst
PachinkoChallenge/development/level/: level_ui_background.xcf
PachinkoChallenge/source/: CMakeLists.txt
PachinkoChallenge/source/game/: game.cpp  game.h
angelscript/: CMakeLists.txt  version.txt
angelscript/add_on/autowrapper/: aswrappedcall.h
gameTemplate/: CMakeLists.txt  Hello.txt  gametemplate.code-workspace
gameTemplate/data/objects/2d/menu/: confirmation.menu  key_bindings.menu  main_menu.cfg  pause.menu  title_screen.menu
gameTemplate/data/objects/2d/objectDataList/: actorDataList.lst  level1List.lst  menuMisc.lst  startupDataList.lst  titleScreenDataList.lst
gameTemplate/data/objects/scripts/: confirmbtn.as  defs.as  state.as
gameTemplate/data/objects/strategy/: strategyListTable.lst
gameTemplate/data/objects/strategy/level_1/: ball.strategy  stage.strategy  stage.strategy.loader
gameTemplate/data/objects/strategy/state/: cube.strategy  loadscreen.strategy  startup.loader  titlescreen.loader
gameTemplate/data/settings/: controllerMapping.cfg  settings.cfg
gameTemplate/data/shaders/: pipeline.cfg  quad_no_txt_vert.spv  quad_vert.spv
gameTemplate/source/game/: game.cpp  game.h
gameTemplate/source/state/: commonstate.cpp  commonstate.h  level1state.cpp  level1state.h  loadstate.cpp  loadstate.h  startupstate.cpp  statemessage.h  titlescreenstate.cpp
invaders/: CMakeLists.txt  invaders.code-workspace
invaders/data/objects/: camera.lst
invaders/data/objects/2d/menu/: main_menu.cfg  menu_action.list
invaders/data/objects/2d/menu/control/: button_arrow.ctrl  button_interface_275x55.ctrl  button_list.ctrl  button_spin_275x55.ctrl  key_binding_button_label.ctrl  key_binding_reset_button.ctrl  key_binding_scroll_box.ctrl  key_binding_slider.ctrl
invaders/data/objects/2d/objectDataList/: dataListTable.lst  level1List.lst  loadingScreenDataList.lst  startupDataList.lst
invaders/data/objects/scripts/: applybtn.as  deadzoneslider.as  keybindbtn.as  level1.as  scriptListTable.lst  shared_sound_utilities.as  state_defs.as  uidefs.as
invaders/data/objects/strategy/: strategyListTable.lst  strategyLoaderListTable.lst
invaders/data/objects/strategy/level1/: background.strategy  background.strategy.loader  buildings.strategy.loader  buildingsback.strategy.loader  buildingsfront.strategy.loader  enemy.strategy.loader  forground.strategy.loader  lower_hud.strategy.loader  playerShip.strategy  ship.strategy.loader  train.strategy.loader  upper_hud.strategy.loader
invaders/data/objects/strategy/state/: loadscreen.loader  startup.loader  titlescreen.loader
invaders/data/settings/: controllerMapping.cfg  settings.cfg
invaders/data/shaders/: compile Vulkan shaders.txt  mesh.frag  mesh_frag.spv  mesh_vert.spv  pipeline.cfg  quad_frag.spv
invaders/data/sound/: soundListTable.lst
invaders/source/game/: game.cpp  game.h  main.cpp
invaders/source/state/: commonstate.cpp  commonstate.h  igamestate.h  level1state.cpp  level1state.h  startupstate.cpp  startupstate.h  statedefs.h  titlescreenstate.cpp  titlescreenstate.h
scriptGameTemplate/: CMakeLists.txt  scriptGameTemplate.code-workspace
scriptGameTemplate/data/objects/: camera.lst
scriptGameTemplate/data/objects/2d/menu/: settings.menu
scriptGameTemplate/data/objects/2d/objectDataList/: menuBackgrounds.lst  menuButtonFrames.lst  stage1DataList.lst  startupDataList.lst  titleScreenDataList.lst
scriptGameTemplate/data/objects/strategy/: strategyListTable.lst
scriptGameTemplate/data/objects/strategy/level_1/: ball.strategy  ball.strategy.loader  stage.strategy  stage.strategy.loader
scriptGameTemplate/data/objects/strategy/state/: cube.strategy  loadscreen.loader  loadscreen.strategy  startup.loader  titlescreen.loader
scriptGameTemplate/data/settings/: controllerMapping.cfg  settings.cfg
scriptGameTemplate/data/shaders/: compile Vulkan shaders.txt  quad_spritesheet.vert
scriptGameTemplate/data/textures/fonts/: font.lst
scriptGameTemplate/source/game/: game.cpp  game.h
scriptGameTestEnvironment/: CMakeLists.txt  gameTemplate.vcxproj  gameTemplate.vcxproj.filters  scriptGameTestEnvironment.code-workspace
scriptGameTestEnvironment/data/objects/strategy/: main.strategy  strategy.loader  strategyListTable.lst
scriptGameTestEnvironment/data/scripts/: scriptListTable.lst
scriptGameTestEnvironment/data/settings/: controllerMapping.cfg  settings.cfg
scriptGameTestEnvironment/data/shaders/: mesh.vert  quad.frag  quad_spritesheet_vert.spv
scriptGameTestEnvironment/source/game/: game.cpp  game.h  main.cpp
(+54 files in other folders)
